--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -34,6 +34,6 @@
   <p>Você pode revogar o consentimento a qualquer momento, removendo a credencial OAuth no n8n.</p>
 
   <h2>7. Contato</h2>
-  <p>Em caso de dúvidas sobre privacidade, envie e‑mail para <a href="mailto:privacy@seu-dominio.com">privacy@seu-dominio.com</a>.</p>
+  <p>Em caso de dúvidas sobre privacidade, envie e‑mail para <a href="mailto:henrrybueno.dev@gmail.com">henrrybueno.dev@gmail.com</a>.</p>
 </body>
 </html>
