--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -34,6 +34,6 @@
   <p>Podemos modificar estes Termos a qualquer momento. Notificaremos no e‑mail cadastrado.</p>
 
   <h2>5. Contato</h2>
-  <p>Para dúvidas, escreva para <a href="mailto:suporte@seu-dominio.com">suporte@seu-dominio.com</a>.</p>
+  <p>Para dúvidas, escreva para <a href="mailto:henrrybueno.dev@gmail.com">henrrybueno.dev@gmail.com</a>.</p>
 </body>
 </html>
