--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+  <meta content="tiktok-developers-site-verification=yasdbzjymHOcW1wEi7aVv0lfnv24xm26">
   <meta charset="UTF-8">
   <title>Política de Privacidade</title>
 </head>
